Fix caption alignment with flex figures

--- a/_local.scss
+++ b/_local.scss
@@ -1,25 +1,3 @@
-/* Typographically correct small caps. */
-.smallcaps {
-    font-variant: all-small-caps;
-}
-
-sup {
-    font-weight: $meta-font-weight;
-}
-
-div.fluid-width-video-wrapper {
-    float: left; // Allow caption to align to top of iframe container
-}
-
-.btn--inverse,
-img,
-video,
-iframe,
-.author__avatar img {
-    border: 0.5px solid $primary-color;
-    background-color: $background-color;
-}
-
 .line,
 .nobg {
     border: 0;
@@ -187,11 +165,6 @@ ul.nav__items li .nav__sub-title {
     font-weight: $meta-font-weight;
 }
 
-blockquote footer {
-    font-size: $type-size-6;
-    font-weight: 500;
-}
-
 nav.toc {
     font-size: $type-size-6;
     color: $text-color;
@@ -235,14 +208,9 @@ nav.toc {
 // Subfigures need to share width and margin features of regular
 // figures, but zero-padding them leads to unexpected results.
 div.subfigures {
-    -webkit-margin-start: 0;
-    -webkit-margin-end: 0;
-    margin-bottom: 3em;
+    @extend figure;
     figure {
-        display: inline; // Do we really need this when we have img.align-left?
         figcaption {
-            float: left;
-            clear: none;
             // Make an exception for the following in img.align-right
             margin: 0.3rem 0.3rem 0 -1.3em;
             max-width: 1em;
@@ -253,13 +221,23 @@ div.subfigures {
     &:not(.full) > p:not(:last-of-type) {
         float: left; // Allow caption to align to top of subfigure container
     }
-    &.full p:last-of-type {
-        margin-right: 0;
-    }
 }
 /*
  * Here there ends the styling of Pandoc and Pandoc-crossref figures
  */
+
+// Replicates _base.scss l.235
+.half img {
+    @include breakpoint($small) {
+        max-width: calc(50% - 0.5em);
+    }
+}
+
+.third img {
+    @include breakpoint($small) {
+        max-width: calc(33.3333% - 0.5em);
+    }
+}
 
 // First we set defaults on narrow screens
 .align-left {
@@ -391,6 +369,15 @@ div.h-scroll {
 a.btn {
     font-weight: $meta-font-weight;
     letter-spacing: 0.05rem;
+}
+
+.btn--inverse,
+img,
+video,
+iframe,
+.author__avatar img {
+    border: 0.5px solid $primary-color;
+    background-color: $background-color;
 }
 
 /**********************
